syntax = "proto3";
option java_multiple_files = true;
package com.msakirc.grpc.server.proto;


message OlapCubeJson {
  string cube = 1;
}

message CubeRequestJson {
  string cube_id = 1;
  string user_id = 2;
}

service CubeShareServiceJson {
  rpc GetOlapCubeJson (CubeRequestJson) returns (OlapCubeJson);
}